continuazione landing page

--- a/landing page/index.html
+++ b/landing page/index.html
@@ -37,7 +37,22 @@
         </nav>
     </header>
     <main>
-        <section class="home"></section>
+        <section class="home">
+            <div class="container">
+                <div class="home-left">
+                    <h1>Pizza Taste</h1>
+                    <h2>
+                        The tasty pizza of <br>
+                        your choice
+                    </h2>
+                    <a href="#">View Menu</a>
+                </div>
+                <div class="home-right">
+                    <img src="https://images.unsplash.com/photo-1565299624946-b28f40a0ae38?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8&w=1000&q=80.png"
+                        alt="una pizza con l'ananas">
+                </div>
+            </div>
+        </section>
         <section class="about"></section>
         <section class="menu"></section>
         <section class="service"></section>
