creato sezione about e menu

--- a/landing page/index.html
+++ b/landing page/index.html
@@ -53,8 +53,61 @@
                 </div>
             </div>
         </section>
-        <section class="about"></section>
-        <section class="menu"></section>
+        <section class="about">
+            <div class="container">
+                <div class="about-left">
+                    <img src="https://cdn.pixabay.com/photo/2017/12/09/08/18/pizza-3007395__480.jpg" alt="">
+                </div>
+                <div class="about-right">
+                    <span class="section-name">About us</span>
+                    <h2 class="section-title">
+                        We make good and 
+                        tasty pizzas
+                    </h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut quo iure rem ducimus tenetur deserunt commodi doloribus, quibusdam vel fuga?
+                    </p>
+                    <a href="#">Learn More</a>
+                </div>
+            </div>
+        </section>
+        <section class="menu">
+            <div class="container">
+                <div class="menu-top">
+                    <span class="section-name">Menu</span>
+                    <h2 class="section-title">Tasty menu of the week</h2>
+                </div>
+                <div class="menu-cards">
+                    <div class="menu-item">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                        <div class="menu-item_img">
+                            <img src="https://images.pexels.com/photos/803290/pexels-photo-803290.jpeg?cs=srgb&dl=pexels-beqa-tefnadze-803290.jpg&fm=jpg" alt="una pizza deliziosa">
+                        </div>
+                        <h3>Cheese Pizza</h3>
+                        <p>Tasty food</p>
+                        <span>$30.05</span>
+                    </div>
+                    <div class="menu-item">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                        <div class="menu-item_img">
+                            <img src="https://img.freepik.com/free-photo/pepperoni-pizza-with-sausages-cheese-dark-wooden-table_220768-9277.jpg?size=626&ext=jpg" alt="una pizza deliziosa">
+                        </div>
+                        <h3>Tropical Pizza</h3>
+                        <p>Tasty food</p>
+                        <span>$42.05</span>
+                    </div>
+                    <div class="menu-item">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                        <div class="menu-item_img">
+                            <img src="https://img.freepik.com/free-photo/top-view-pepperoni-pizza-with-mushroom-sausages-bell-pepper-olive-corn-black-wooden_141793-2158.jpg?w=740&t=st=1661842808~exp=1661843408~hmac=c40f0c154036b96b1dba17947c4e4f7c07f40db983106490402bb0b7b6ec452e" alt="una pizza deliziosa">
+                        </div>
+                        <h3>Mecaroni Pizza</h3>
+                        <p>Tasty food</p>
+                        <span>$12.05</span>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="service"></section>
         <section class="contact"></section>
     </main>
