--- a/landing page/index.html
+++ b/landing page/index.html
@@ -61,7 +61,7 @@
                 <div class="about-right">
                     <span class="section-name">About us</span>
                     <h2 class="section-title">
-                        We make good and 
+                        We make good and <br>
                         tasty pizzas
                     </h2>
                     <p>
